--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     />
     <meta name="theme-color" content="#ffffff" />
 
-    <!-- Reset css -->
+    <!-- Reset css 1-->
     <link rel="stylesheet" href="./assets/css/reset.css" />
 
     <!-- Embed fonts -->
